--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Luis Galicia - Senior Developer</title>
+  <title>Luis Galicia - Desarrollador Full-Stack</title>
   <base href="/">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <!-- <link rel="icon" type="image/x-icon" href="icon.ico"> -->
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css">
   <link rel="stylesheet" href="assets/css/urku.css">
   <!-- End Imports -->
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body class="top-fixed">
   <app-root></app-root>
