--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Luis Galicia - Desarrollador Full-Stack</title>
-  <base href="/">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-  <!-- <link rel="icon" type="image/x-icon" href="icon.ico"> -->
-  <link rel="icon" type="image/jpg" sizes="16x16" href="assets/img/icon.jpg">
+  <head>
+    <meta charset="utf-8" />
+    <title>Luis Galicia - Desarrollador Full Stack</title>
+    <base href="/" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <!-- <link rel="icon" type="image/x-icon" href="icon.ico"> -->
+    <link
+      rel="icon"
+      type="image/jpg"
+      sizes="16x16"
+      href="assets/img/icon.jpg"
+    />
 
-  <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+    <link
+      rel="stylesheet"
+      href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css"
+    />
 
-  <!-- Imports -->
-  <!-- <link rel="icon" type="image/svg+xml" href="assets/img/urku-ico.svg"> -->
-  <link rel="stylesheet" href="assets/css/aurora-pack.min.css">
-  <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css">
-  <link rel="stylesheet" href="assets/css/urku.css">
-  <!-- End Imports -->
+    <!-- Imports -->
+    <!-- <link rel="icon" type="image/svg+xml" href="assets/img/urku-ico.svg"> -->
+    <link rel="stylesheet" href="assets/css/aurora-pack.min.css" />
+    <link rel="stylesheet" href="assets/css/aurora-theme-base.min.css" />
+    <link rel="stylesheet" href="assets/css/urku.css" />
+    <!-- End Imports -->
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-</head>
-<body class="top-fixed">
-  <app-root></app-root>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  <body class="top-fixed">
+    <app-root></app-root>
 
-  <!-- Imports -->
-  <script src="assets/js/svg4everybody.min.js"></script>
-  <script>svg4everybody();</script>
-  <!-- End Imports -->
-</body>
+    <!-- Imports -->
+    <script src="assets/js/svg4everybody.min.js"></script>
+    <script>
+      svg4everybody();
+    </script>
+    <!-- End Imports -->
+  </body>
 </html>
